Clean extracted itwmm

--- a/notebooks/2. Creating an expressive 3DMM.ipynb
+++ b/notebooks/2. Creating an expressive 3DMM.ipynb
@@ -56,26 +56,34 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [],   
    "source": [
     "def generate_id_exp_model(data_path):\n",
     "    # Load the LSFM ID model\n",
     "    lsfm_model = m3io.import_lsfm_model(data_path / 'all_all_all.mat')\n",
-    "\n",
+    "    \n",
+    "    # The number of ID and expression deformation components\n",
+    "    n_id = lsfm_model.n_active_components\n",
+    "    n_exp = 28 \n",
+    "    \n",
     "    # Multiply the LSFM components with a scale factor, and bake in the eigenvalues.\n",
     "    # The scale factor is to normalize weightings between ID and expression models.\n",
-    "    scale = np.sqrt(lsfm_model.eigenvalues[:157])\n",
-    "    i_raw = lsfm_model.components[:157] * scale[:, None]\n",
+    "    scale = np.sqrt(lsfm_model.eigenvalues[:n_id])\n",
+    "    i_raw = lsfm_model.components[:n_id] * scale[:, None]\n",
     "    \n",
     "    # Load the expression deformations from the data, and again scale for balancing\n",
-    "    e_raw = sio.loadmat(str(data_path / '300W-3D' / 'Code' / 'Model_Exp.mat'))['w_exp'].T[:-1] * 1.00068469 / (1e5 * 4)\n",
+    "    scale_exp_mean = 1.0006846894227463e-05\n",
+    "    scale_exp_comps = scale_exp_mean / 2.5\n",
+    "    e_raw = sio.loadmat(str(data_path / '300W-3D' / 'Code' / 'Model_Exp.mat'))['w_exp'].T[:-1] * scale_exp_comps \n",
+    "    e_mean = sio.loadmat(str(data_path / '300W-3D' / 'Code' / 'Model_Exp.mat'))['mu_exp'].T * scale_exp_mean\n",
     "    \n",
     "    # We now just need to combine the two models.\n",
-    "    id_ind = np.arange(157)\n",
-    "    exp_ind = np.arange(157, 185)\n",
-    "    components = np.zeros([185, i_raw.shape[1]])\n",
+    "    id_ind = np.arange(n_id)\n",
+    "    exp_ind = np.arange(n_id, n_id + n_exp)\n",
+    "    components = np.zeros([n_id + n_exp, i_raw.shape[1]])\n",
     "    components[id_ind] = i_raw\n",
     "    components[exp_ind] = e_raw\n",
+    "    mean_combined = TriMesh(lsfm_model.mean().points + e_mean.reshape((-1,3)), lsfm_model.mean().trilist) \n",
     "    \n",
     "    # iBUG 68 landmarks \n",
     "    lms_vertex_indices = [\n",
@@ -88,14 +96,14 @@
     "        10922,  9556,  8836,  8236,  7636,  6794,  5905,  7264,  8223,\n",
     "        9063, 10404,  8828,  8228,  7509\n",
     "    ]\n",
-    "    lms = PointCloud(lsfm_model.mean().points[lms_vertex_indices])\n",
+    "    lms = PointCloud(mean_combined.points[lms_vertex_indices])\n",
     "\n",
     "    # Initialize a Menpo PCA Model from the raw data.\n",
     "    # Note that we fix the eigenvalues to 1, as we choose to rescale\n",
     "    # the components to 'bake-in' the eigenvalues above.\n",
     "    shape_model = PCAModel.init_from_components(components, \n",
     "                                                np.ones(components.shape[1]), \n",
-    "                                                lsfm_model.mean(), \n",
+    "                                                mean_combined, \n",
     "                                                lsfm_model.n_samples, \n",
     "                                                True)\n",
     "    \n",
